--- a/package.json
+++ b/package.json
@@ -1,38 +1,68 @@
 {
-  "name": "express-example-api",
-  "version": "1.0.0",
-  "description": "An example Node.js REST-API built with Express.js",
-  "main": "dist/app.js",
-  "scripts": {
-    "start": "node ./dist/app.js",
-    "build": "rm -rf dist && tsc -p tsconfig.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Lars Wächter",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
-  },
-  "dependencies": {
-    "acl": "^0.4.11",
-    "bcryptjs": "^2.4.3",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "decko": "^1.2.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "helmet": "^4.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "node-cache": "^5.1.2",
-    "nodemailer": "^6.6.2",
-    "passport": "^0.4.1",
-    "passport-http": "^0.3.0",
-    "passport-jwt": "^4.0.0",
-    "typeorm": "^0.2.34",
-    "uuid": "^8.3.2",
-    "validator": "^13.6.0",
-    "winston": "^3.3.3"
-  }
+	"name": "express-example-api",
+	"version": "1.0.0",
+	"description": "An example Node.js REST-API built with Express.js",
+	"homepage": "https://larswaechter.dev/blog/nodejs-rest-api-structure/",
+	"repository": "https://github.com/larswaechter/expressjs-api",
+	"main": "./dist/app.js",
+	"scripts": {
+		"start": "node ./dist/app.js",
+		"build": "rm -rf dist && tsc -p tsconfig.json && gulp copy && gulp merge",
+		"watch": "nodemon --exec \"npm run build && npm run start\" --watch src --ext ts",
+		"watch-dirty": "nodemon --exec \"tsc -p tsconfig.json && npm run start\" --watch src --ext ts",
+		"test": "npm run build && mocha",
+		"lint": "tslint -p tsconfig.json",
+		"prettier": "prettier --config ./.prettierrc --write src/**/*.ts"
+	},
+	"author": "Lars Wächter",
+	"license": "MIT",
+	"devDependencies": {
+		"@types/acl": "^0.4.38",
+		"@types/bcryptjs": "^2.4.2",
+		"@types/chai": "^4.2.21",
+		"@types/compression": "^1.7.1",
+		"@types/cors": "^2.8.12",
+		"@types/ejs": "^3.0.7",
+		"@types/express": "^4.17.13",
+		"@types/mocha": "^8.2.3",
+		"@types/nodemailer": "^6.4.4",
+		"@types/passport": "^1.0.7",
+		"@types/passport-http": "^0.3.9",
+		"@types/passport-jwt": "^3.0.6",
+		"@types/supertest": "^2.0.11",
+		"@types/uuid": "^8.3.1",
+		"@types/validator": "^13.6.3",
+		"chai": "^4.3.4",
+		"gulp": "^4.0.2",
+		"gulp-merge-json": "^2.1.1",
+		"mocha": "^9.0.2",
+		"nodemon": "^2.0.12",
+		"prettier": "^2.3.2",
+		"sql.js": "^1.5.0",
+		"supertest": "^6.1.3",
+		"tslint": "^6.1.3",
+		"tslint-config-prettier": "^1.18.0",
+		"typescript": "^4.3.5"
+	},
+	"dependencies": {
+		"acl": "^0.4.11",
+		"bcryptjs": "^2.4.3",
+		"compression": "^1.7.4",
+		"cors": "^2.8.5",
+		"decko": "^1.2.0",
+		"ejs": "^3.1.6",
+		"express": "^4.17.1",
+		"helmet": "^4.6.0",
+		"jsonwebtoken": "^8.5.1",
+		"mysql": "^2.18.1",
+		"node-cache": "^5.1.2",
+		"nodemailer": "^6.6.2",
+		"passport": "^0.4.1",
+		"passport-http": "^0.3.0",
+		"passport-jwt": "^4.0.0",
+		"typeorm": "^0.2.34",
+		"uuid": "^8.3.2",
+		"validator": "^13.6.0",
+		"winston": "^3.3.3"
+	}
 }
