--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"outDir": "dist",
+		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true
 	},
 	"lib": ["es2015"]
