--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"decko": "^1.2.0",
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
+		"express-validator": "^6.12.0",
 		"helmet": "^4.6.0",
 		"jsonwebtoken": "^8.5.1",
 		"mysql": "^2.18.1",
