Add database seeding

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"watch": "nodemon --exec \"npm run build && npm run start\" --watch src --ext ts",
 		"watch-dirty": "nodemon --exec \"tsc -p tsconfig.json && npm run start\" --watch src --ext ts",
 		"test": "npm run build && mocha",
+		"seed": "node db/index.js",
 		"lint": "tslint -p tsconfig.json",
 		"prettier": "prettier --config ./.prettierrc --write src/**/*.ts"
 	},
