Fix .env.example & seed.sql

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # General config
-NODE_ENV="development"
+NODE_ENV=development
 NODE_PORT=3000
 
-DOMAIN="http://localhost:3000"
+DOMAIN=http://localhost:3000
 
 # SMTP config for mail service
-SMTP_HOST="smtp.ethereal.email"
+SMTP_HOST=smtp.ethereal.email
 SMTP_PORT=587
-SMTP_USERNAME="username"
-SMTP_PASSWORD="password"
+SMTP_USERNAME=username
+SMTP_PASSWORD=password
