--- a/.env.docker.example
+++ b/.env.docker.example
@@ -11,11 +11,11 @@ SMTP_USERNAME=username
 SMTP_PASSWORD=password
 
 # Redis
-REDIS_URL=
+REDIS_URL=redis://redis
 
 # Database
 TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=localhost
+TYPEORM_HOST=mysql
 TYPEORM_USERNAME=root
 TYPEORM_PASSWORD=password
 TYPEORM_DATABASE=expressjs_api
