--- a/.env.docker
+++ b/.env.docker
@@ -1,12 +1,12 @@
 # General config
-NODE_ENV=development
+NODE_ENV=production
 NODE_PORT=3000
 
 DOMAIN=http://localhost:3000
 
 # SMTP config for mail service
-SMTP_HOST=smtp.ethereal.email
-SMTP_PORT=587
+SMTP_HOST=mailhog
+SMTP_PORT=1025
 SMTP_USERNAME=username
 SMTP_PASSWORD=password
 
